# hoopla

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  about.yaml  mkdocs.yml  project.Makefile  pyproject.toml
.github/workflows/: deploy-docs.yaml
examples/: ImbalancedSubClassTriad-001.yaml  Pattern-001.yaml  README.md  SubClassTriad-limb.yaml
project/excel/: hoopla.xlsx
project/graphql/: hoopla.graphql
project/jsonld/: hoopla.context.jsonld  hoopla.jsonld
project/jsonschema/: hoopla.schema.json
project/owl/: hoopla.owl.ttl
project/prefixmap/: hoopla.yaml
project/protobuf/: hoopla.proto
project/shacl/: hoopla.shacl.ttl
project/shex/: hoopla.shex
project/sqlschema/: hoopla.sql
src/docs/: about.md
src/hoopla/: __init__.py
src/hoopla/datamodel/: __init__.py  hoopla.py
src/hoopla/schema/: core.yaml  hoopla.yaml
src/hoopla/schema/SubClassTriad/: ComplementSubClassTriad-example-cartilage-uberon.yaml  StructureEntityPart.yaml  SubClassTriad-example-limb-uberon.yaml  SubClassTriad.yaml
src/hoopla/utils/: example_runner.py
tests/: __init__.py  test_data.py  test_example_runner.py
tests/input/examples/: Ontology-limb.yaml  PatternInstantiationCollection-limb.yaml  SubClassTriad-limb.yaml
