[tool.poetry]
name = "hoopla"
version = "0.1.0"
description = "Higher Order Ontology Pattern LibrAry"
authors = ["Chris Mungall <cjmungall@lbl.gov>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/hoopla/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.5.3"
linkml-owl = "^0.2.8"

[tool.poetry.dev-dependencies]
linkml = ">=1.5.4"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
linkml-owl = "^0.2.2"

[tool.poetry.group.dev.dependencies]
linkml = "^1.6.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
